--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         </p>
         <p class="contenido_numerovecesnumeroaleatorio">
           El porcentaje de intentos hasta alcanzar el número aleatorio es de:
-          <span id="numerovecesnumeroaleatorio">100%</span>
         </p>
+        <p id="numerovecesnumeroaleatorio">100%</p>
         <div class="contenido_botones">
           <button
             class="contenido_botones_boton"
