Corrijo falta de ortografia

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               text-decoration: underline;
             "
             >5</span
-          >, despúes de eso, el input se bloquea y el botón Adivinar también se
+          >, después de eso, el input se bloquea y el botón Adivinar también se
           bloquea. Para resetear el número de intentos debes hacer click en el
           botón
           <span
