--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         ><img src="./img/FirmaWaldo.png" width="20%"
       /></a>
       <p>
-        <span style="font-weight: 700">Conversores</span> desarollados 100% por
+        <span style="font-weight: 700">Juego</span> desarollado 100% por
         <a
           href="https://linktr.ee/waldohidalgo"
           style="color: yellow; font-family: carter"
